--- a/TrafficSignlassifier/Traffic_Sign_Classifier.ipynb
+++ b/TrafficSignlassifier/Traffic_Sign_Classifier.ipynb
@@ -836,7 +836,7 @@
     "    \n",
     "    drop = Dropout(0.7)(conv3)\n",
     "    \n",
-    "    pool = MaxPooling2D((2,2))(conv3_act)\n",
+    "    pool = MaxPooling2D((2,2))(drop)\n",
     "    # 16x16x32\n",
     "    conv3 = Conv2D(64, (3,3), padding='valid', kernel_initializer=winit, activation='relu')(pool)\n",
     "    \n",
