--- a/VehicleDetection/vehicle_detection.ipynb
+++ b/VehicleDetection/vehicle_detection.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# VEHICLE DETECTION"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -2221,7 +2228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 411,
+   "execution_count": 413,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2273,15 +2280,13 @@
     "            r = bgr2rgb(r)\n",
     "        bimg = np.vstack((bimg, r))\n",
     "    if show_fps:\n",
-    "        global \n",
+    "        global t0\n",
     "        tn = time()\n",
-    "        if len(tpss):\n",
+    "        if t0:\n",
     "            t1 = tn - t0\n",
     "            tpss.append(t1)\n",
     "            fps = len(tpss)/ (np.sum(tpss))\n",
     "            cv2.putText(bimg, '{:.2f} fps'.format(fps), (10,30), cv2.FONT_HERSHEY_PLAIN, 2, 255)\n",
-    "        else:\n",
-    "            tpss.append(0)\n",
     "        t0 = tn\n",
     "    return bimg"
    ]
@@ -2321,22 +2326,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 412,
+   "execution_count": 414,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 't0' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-412-0a4c1b217e18>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     10\u001b[0m     \u001b[0mret\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mframe\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcap\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mret\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m         \u001b[0mbimg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mpipeline_NN\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m         \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mimshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'ww'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbimg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m         \u001b[0mkey\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcv2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwaitKey\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m&\u001b[0m \u001b[1;36m0xff\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-411-d260ba5ddcb5>\u001b[0m in \u001b[0;36mpipeline_NN\u001b[1;34m(image, draw_heatmap, rgb, show_fps)\u001b[0m\n\u001b[0;32m     48\u001b[0m         \u001b[0mtn\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtpss\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 50\u001b[1;33m             \u001b[0mt1\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtn\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mt0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     51\u001b[0m             \u001b[0mtpss\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     52\u001b[0m             \u001b[0mfps\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtpss\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m/\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mtpss\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 't0' referenced before assignment"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cap = cv2.VideoCapture('../Advanced-Lane-Lines/project_video.mp4')\n",
     "heatmaps = []\n",
@@ -2363,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 415,
    "metadata": {
     "scrolled": true
    },
@@ -2380,7 +2372,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████▉| 1260/1261 [05:57<00:00,  3.50it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████▉| 1260/1261 [05:54<00:00,  3.50it/s]\n"
      ]
     },
     {
@@ -2390,7 +2382,7 @@
       "[MoviePy] Done.\n",
       "[MoviePy] >>>> Video ready: project_video_out_keras.mp4 \n",
       "\n",
-      "Wall time: 5min 59s\n"
+      "Wall time: 5min 55s\n"
      ]
     }
    ],
@@ -2403,7 +2395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 416,
    "metadata": {},
    "outputs": [
     {
@@ -2418,7 +2410,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 364,
+     "execution_count": 416,
      "metadata": {},
      "output_type": "execute_result"
     }
